// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segmented render options 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`Segmented render options with ellipsis 1`] = `
<div
  class="ant-segmented ant-segmented-block"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="123"
      >
        123
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="456"
      >
        456
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
        >
          longtext
        </span>
      </div>
    </label>
  </div>
</div>
`;
